test/tests/compiler/18_structures/valid/import_and_use/plx1_import_simple.plx
pub fn main(none) i32 {
    x: i32 = -1
    import `incr_x`
    return x
}
