test/tests/compiler/18_structures/invalid_lex/plx1_import_in_line.plx
pub import `return_0`

pub fn main(none) i32 {
    return_0()
}
